--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Voyages around the world -- Fiction'
 - !lcsh 'Adventure stories'
 - !lcc 'PR'
+- GITenberg
 title: A New Voyage Round the World by a Course Never Sailed Before
 url: http://www.gutenberg.org/ebooks/35774
